--- a/src/pages/index/index.module.less
+++ b/src/pages/index/index.module.less
@@ -1,3 +1,10 @@
 .red {
   color: red;
 }
+
+.test_size {
+  box-sizing: border-box;
+  border: 1px solid red;
+  margin: 20px;
+  height: 100px;
+}
