--- a/src/pages/index/index.module.less
+++ b/src/pages/index/index.module.less
@@ -4,7 +4,7 @@
 
 .test_size {
   box-sizing: border-box;
-  border: 1px solid red;
-  margin: 20px;
-  height: 100px;
+  border: 1rpx solid red;
+  margin: 20rpx;
+  height: 100rpx;
 }
